# camac_signal_analyser

./: .dockerignore  .gitignore  Dockerfile  README.md  project_context_plan.md  requirements.txt
cpp_core/: CMakeLists.txt
cpp_core/include/: camac_archive.hpp  camac_event.hpp  camac_parser.hpp
cpp_core/src/: bindings.cpp  camac_parser.cpp  main.cpp
python_gui/: app_state.py  constants.py  main.py  plot_event_csv.py  test_camac_core.py
python_gui/analysis/: b_value.py  fft_analysis.py  signal_metrics.py  statistical_values.py  wavelet_analysis.py
python_gui/file_io/: csv_exporters.py
python_gui/ui/: dialogs.py
python_gui/widgets/: archive_overview_widget.py  event_viewer_widget.py
python_gui/windows/: full_analysis_window.py  main_window.py
python_gui/workers/: statistics_worker.py
